--- a/.dotfiles/.config/sway/config
+++ b/.dotfiles/.config/sway/config
@@ -10,7 +10,7 @@ set $wallpaper_path time
 set $bin_path $HOME/.local/bin
 
 set $term_workspace 1
-set $email_workspace 2
+set $email_workspace 9
 set $browser_workspace 10
 
 set $rosewater #f5e0dc
@@ -54,41 +54,46 @@ exec $bin_path/idle daemon
 exec $bin_path/polkit
 
 exec blueman-applet
-exec nm-applet --indicator
 exec fcitx5
+exec nm-applet --indicator
 exec udiskie -t --appindicator
 
 exec $term
 exec $browser
 exec $email
 
-xwayland enable
-floating_modifier $mod
-default_border normal 2
-default_floating_border normal 2
-titlebar_border_thickness 2
-titlebar_padding 10 5
-title_align center
-smart_borders off
-floating_minimum_size 600 x 450 
-focus_follows_mouse yes
-focus_on_window_activation smart
-focus_wrapping no
-gaps inner 4
+gaps inner 6
 gaps outer 0
 smart_gaps off
-mouse_warping container
-tiling_drag enabled
-workspace_auto_back_and_forth no
-
+default_border normal 2
+default_floating_border normal 2
+smart_borders on
 font pango:Inter Display Medium 12
+title_align center
+titlebar_padding 10 5
+titlebar_border_thickness 2
+floating_minimum_size 600 x 450 
 client.focused           $surface0     $surface0 $text  $surface0 $surface0
 client.focused_inactive  $surface0     $surface0 $text  $surface0 $surface0
 client.unfocused         $crust        $crust    $text  $crust    $crust
 client.urgent            $red          $red      $text  $red      $red
 
+xwayland enable
+floating_modifier $mod
+mouse_warping container
+tiling_drag enabled
+focus_follows_mouse yes
+focus_on_window_activation smart
+focus_wrapping no
+workspace_layout default
+workspace_auto_back_and_forth no
+
 output "*" bg ~/wallpaper.png fill
 output Virtual-1 res 1440x900
+
+workspace 1 output DP-2
+workspace 2 output eDP-1
+workspace 3 output eDP-1
 
 input "type:keyboard" {
     xkb_layout us
@@ -132,6 +137,15 @@ bindsym --to-code --inhibited {
     $mod+$up focus up
     $mod+$down focus down
 
+    $mod+I focus output right
+    $mod+U focus output left
+    $mod+Y focus output up
+    $mod+O focus output down
+    $mod+ALT+I move workspace to output right
+    $mod+ALT+U move workspace to output left
+    $mod+ALT+Y move workspace to output up
+    $mod+ALT+O move workspace to output down
+
     $mod+ALT+$left move left
     $mod+ALT+$right move right
     $mod+ALT+$up move up
@@ -144,9 +158,9 @@ bindsym --to-code --inhibited {
 
     $mod+Return exec swaymsg workspace $term_workspace && $term
     $mod+B exec swaymsg workspace $browser_workspace && $browser
-    $mod+I exec $bin_path/idle toggle
-    $mod+P exec flameshot gui
-    $mod+SHIFT+P exec flameshot screen
+    $mod+semicolon exec $bin_path/idle toggle
+    $mod+comma exec flameshot gui
+    $mod+SHIFT+comma exec flameshot screen
     $mod+SHIFT+B exec pkill waybar || exec waybar
 
     $mod+Space exec $bin_path/rofi_launcher
@@ -183,8 +197,10 @@ bindsym $mod+ALT+5 move workspace 5, workspace 5
 bindsym $mod+ALT+6 move workspace 6, workspace 6 
 bindsym $mod+ALT+7 move workspace 7, workspace 7 
 bindsym $mod+ALT+8 move workspace 8, workspace 8 
-bindsym $mod+ALT+9 move workspace 9, workspace 9 
-bindsym $mod+ALT+0 move workspace 10, workspace 10
+bindsym $mod+ALT+9 move workspace 9, workspace 9
+bindsym $mod+ALT+0 move workspace 10, workspace 10 
+bindsym --to-code $mod+n workspace next
+bindsym --to-code $mod+p workspace prev
 bindsym --to-code $mod+G workspace back_and_forth
 bindgesture swipe:4:left workspace next
 bindgesture swipe:4:right workspace prev
@@ -201,32 +217,17 @@ bindsym SHIFT+XF86AudioLowerVolume exec wpctl set-volume -l 1.5 @DEFAULT_SINK@ 1
 bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec wpctl set-mute @DEFAULT_SOURCE@ toggle
 
-for_window [window_type="dialog"] floating enable
-for_window [window_type="utility"] floating enable
-for_window [window_role="pop-up"] floating enable
-for_window [window_role="bubble"] floating enable
-for_window [window_role="task_dialog"] floating enable
-
-for_window [title="Open File"] floating enable
-for_window [title="Save File"] floating enable
-for_window [title="File Upload"] floating enable
-for_window [title="Authentication Required"] floating enable
-
 for_window [app_id="gnome-keyring-prompt"] floating enable
 for_window [app_id="polkit"] floating enable
 for_window [app_id="pinentry-gtk-2"] floating enable
 for_window [app_id="gnome-keyring-ask"] floating enable
 for_window [app_id="nwg-look"] floating enable
 
-for_window [class="steam" title="Friends List"] floating enable
-
 for_window [app_id="foot"] move container workspace $term_workspace
 for_window [app_id="zen"] move container workspace $browser_workspace
 for_window [app_id="firefox"] move container workspace $browser_workspace
 for_window [app_id="chromium"] move container workspace $browser_workspace
 for_window [app_id="thunderbird"] move container workspace $email_workspace
-for_window [app_id="thunar" title=".*File Operation Progress.*"] floating enable
-for_window [app_id="thunar" title="Rename.*"] floating enable
 
 for_window [app_id="pavucontrol"] {
     floating enable
@@ -237,10 +238,6 @@ for_window [app_id="blueman-manager"] {
     resize set 800px 600px
 }
 for_window [app_id="nm-connection-editor"] {
-    floating enable
-    resize set 800px 600px
-}
-for_window [app_id="ristretto"] {
     floating enable
     resize set 800px 600px
 }
